# advisoryhub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  cliff.toml  conftest.py  docker-compose.yml  gunicorn.conf.py  manage.py  mise.toml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  renovate.json  zizmor.yml
.github/workflows/: ci.yml  docs.yml  release-image.yml  release.yml  renovate.yml  workflow-security.yml
.sbx-kit/: spec.yaml
access/: admin.py  models.py  services.py  tests.py  urls.py  views.py
access/migrations/: 0001_initial.py  0002_initial.py  0002_rename_access_principal_idx_access_advi_princip_689446_idx_and_more.py  0003_rename_permission_levels.py
accounts/: admin.py  apps.py  auth.py  models.py  services.py  signals.py  step_up.py  test_auth_audit.py  test_ban.py  test_email_linking.py  test_mask_email.py  test_roster_linking.py  test_step_up.py  test_user_display.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_add_notification_levels.py  0002_user_is_provisioned.py  0003_backfill_notification_levels.py  0003_notificationpreference_on_triage_event.py  0004_drop_legacy_notification_fields.py  0004_user_ban_reason_user_banned_at_user_banned_by.py  0005_alter_notificationpreference_id_alter_user_groups_and_more.py  0006_repair_notification_columns.py  0007_notification_help_text.py
accounts/templatetags/: user_display.py
admin_console/: forms.py  models.py  stats.py  test_admin_console.py  test_ban.py  test_forget.py  test_ghsa.py  test_invitations.py  test_maintenance.py  test_project_form_save_feedback.py  test_query_budgets.py  test_roster_sync_view.py  test_seed_demo.py  test_stats.py  test_stats_view.py  test_users_groups.py  tests.py  urls.py
admin_console/migrations/: 0001_initial.py
admin_console/views/: __init__.py  access_log.py  audit.py  base.py  cves.py  ghsa.py  groups.py  inbox.py  invitations.py  maintenance.py  projects.py  publications.py  stats.py  users.py
advisories/: admin.py  apps.py  cwes.py  diff.py  ecosystems.py  form_assembly.py  forms.py  identifiers.py  models.py  path_converters.py  permissions.py  services.py  severity.py  signals.py  timeline.py  urls.py  validators.py  views.py  views_workflow.py  visit_markers.py
advisories/data/: cwes.json
advisories/migrations/: 0001_initial.py  0002_alias_search_indexes.py  0002_initial.py  0003_advisory_access_review_required_at.py  0003_advisory_no_delete_trigger.py  0004_advisoryvisit.py  0004_rename_adv_state_idx_advisories__state_73661c_idx_and_more.py  0005_advisory_reassignment_request_note_and_more.py  0005_assigned_cve_id_and_request_ban.py  0006_advisory_reassignment_suggested_project.py  0006_ghsa_linked_advisory.py  0007_advisory_no_delete_trigger.py  0007_advisory_withdrawal_request_note_and_more.py  0008_advisory_comments_lock_reason_and_more.py  0008_alter_advisory_state_advisoryintakemetadata.py  0009_advisory_severity_level_severity_score.py  0009_alter_advisory_review_status.py  0010_advisory_rls.py  0010_advisory_version.py  0011_advisory_ghsa_sync_error.py  0011_delete_advisory_snapshot.py  0012_advisory_dismissed_from_state.py
advisories/templatetags/: advisory_display.py
advisories/tests/: test_access_log_disjoint.py  test_action_notes.py  test_changed_marker.py  (+27 more)
api/: responses.py  serializers.py  urls.py  views_access.py  views_advisories.py  views_comments.py  views_dashboard.py  views_publication.py
audit/: admin.py  apps.py  models.py  partitions.py  retention.py  services.py  tasks.py  test_partitions.py  test_redact_ghsa_secrets.py  test_retention.py  tests.py
comments/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
common/: celery_metrics.py  constants.py  context_processors.py  enqueue.py  health.py  logging.py  metrics.py  middleware.py  net.py  ratelimit.py  rls.py  sentry.py  test_enqueue.py  test_home.py  test_net.py  test_prod_settings.py  test_proxy_settings.py  test_text_diff.py  test_timestamp_tag.py  test_toast_messages.py  tests.py  text_diff.py  users.py  views.py
config/: celery.py  urls.py
dev/: 404.html  audit_dependencies.sh  check_chart_assets.sh  check_import_direction.py  check_release_versions.sh  check_template_comments.py  check_vendored_assets.sh  deploy_docs.sh  index.html  mkdocs_oad_hook.py  release.sh  sitemap.xml  update_vendored_assets.py  validate_chart.sh
docker/: collect-runtime-deps.sh  entrypoint.py  entrypoint.sh
docs/: index.md  releasing.md
ghsa/: admin.py  apps.py  client.py  models.py  pmi.py  services.py  tasks.py  translator.py  urls.py  views.py  webhooks.py
intake/: forms.py  models.py  services.py  urls.py  views.py
locale/: README.md
notifications/: context_processors.py  forms.py  models.py  recipients.py  services.py  tasks.py  test_inbox.py  tests.py  urls.py  views.py
projects/: admin.py  eclipse_api.py  forms.py  models.py  services.py  tasks.py  test_eclipse_api.py  test_roster_sync.py  tests.py
publication/: admin.py  csaf.py  cve.py  git_service.py  models.py  osv.py  repo_config.py  services.py  tasks.py  urls.py  views.py
similarity/: admin.py  models.py  prefilter.py  services.py  tasks.py  urls.py  views.py
static/: advisoryhub-access.js  advisoryhub-altcha.js  advisoryhub-clipboard.js  advisoryhub-cvss.js  advisoryhub-cwe.js  advisoryhub-dialogs.js  advisoryhub-form-dirty.js  advisoryhub-forms.js  advisoryhub-formsets.js  advisoryhub-htmx.js  advisoryhub-maintenance.js  advisoryhub-mentions.js  advisoryhub-rail.js  advisoryhub-row-link.js  advisoryhub-select.js  advisoryhub-theme.js  advisoryhub-time.js  advisoryhub-toast.js  advisoryhub-validate.js  advisoryhub.css  htmx.VERSION
templates/: 403.html  403_csrf.html  404.html  500.html  _confirm_action.html  altcha_widget.html  base.html  error_base.html  landing.html
tests/: test_authorization_matrix.py  test_import_direction_guard.py
weekly-reports/: 2026-07-01-data-model.md  2026-07-06-security.md
workflows/: admin.py  models.py  services.py  tests.py
(+328 files in other folders)
