[project]
name = "advisoryhub"
version = "0.1.0"
description = "Eclipse Foundation security advisory authoring, review, and publication system"
readme = "README.md"
license = "EPL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
dependencies = [
    "Django>=5.2,<5.3",
    "psycopg[binary]>=3.2",
    "mozilla-django-oidc>=4.0",
    "django-htmx>=1.21",
    "celery>=5.4",
    "redis>=5.0",
    "markdown-it-py>=3.0",
    "bleach>=6.1",
    "jsonschema>=4.21",
    "cvss>=3.0",
    "django-environ>=0.11",
    "django-ratelimit>=4.1",
    "sentry-sdk[django]>=2.0",
    "django-prometheus>=2.3",
    "requests>=2.32",
    "PyJWT[crypto]>=2.8",
    "django-hcaptcha>=0.2",
    "django-csp>=4.0",
    "whitenoise[brotli]>=6.6",
    "gunicorn>=23",
]

[tool.setuptools]
packages = [
    "config", "config.settings",
    "common",
    "accounts", "accounts.migrations",
    "projects", "projects.migrations",
    "audit", "audit.migrations", "audit.management", "audit.management.commands",
    "advisories", "advisories.migrations", "advisories.tests",
    "access", "access.migrations",
    "comments", "comments.migrations", "comments.templatetags",
    "notifications", "notifications.migrations",
    "workflows", "workflows.migrations",
    "publication", "publication.migrations", "publication.schemas", "publication.tests",
    "admin_console", "admin_console.management", "admin_console.management.commands",
    "api", "api.tests",
    "ghsa", "ghsa.migrations", "ghsa.management", "ghsa.management.commands", "ghsa.tests",
    "intake", "intake.migrations", "intake.tests",
    "intake.management", "intake.management.commands",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.5",
    "django-stubs[compatible-mypy]>=5.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q --strict-markers --reuse-db"
filterwarnings = [
    "ignore::DeprecationWarning:bleach",
]

[tool.ruff]
line-length = 100
# Deliberately one notch below the 3.14 runtime. ruff's py314 *formatter* strips
# the parentheses from `except (A, B):` (PEP 758) — a 3.14-only spelling that
# reads like the old Python-2 `except A, B` idiom and is an easy misread.
# Targeting py313 stops the formatter from introducing it; no lint (UP) gains are
# lost (there are none for this codebase at py314). mypy/ty still target 3.14.
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E", "F", "W", "I", "B", "UP", "DJ"]
"*/tests/*" = ["E402"]
"*/test_*.py" = ["E402"]
"advisories/models.py" = ["DJ012"]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    ".venv/*",
    "*/migrations/*",
    "*/tests/*",
    "*/tests.py",
    "*/test_*.py",
    "conftest.py",
    "manage.py",
    "config/asgi.py",
    "config/wsgi.py",
]

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
files = [
    "accounts", "access", "advisories", "api", "audit", "comments",
    "common", "config", "ghsa", "intake", "notifications", "projects",
    "publication", "workflows",
]
# Pragmatic baseline: resolve Django ORM dynamics via django-stubs, but don't
# force annotations on every function or chase third-party stub gaps. Tighten
# over time.
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = true
warn_return_any = false
exclude = '(/migrations/|/tests/|conftest\.py|test_.*\.py|_test\.py)'

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.coverage.report]
show_missing = true
skip_covered = false
# Floor set just below the measured baseline (≈81%) so coverage can only
# ratchet up. The whole suite runs on Postgres, so the trigger/index and
# JSONB paths count toward coverage rather than showing as missed.
fail_under = 80

# --- ty (Astral type checker) ---------------------------------------------
# ty runs as an *advisory* (non-blocking) CI check alongside the enforced
# mypy gate — it's faster and catches some categories mypy doesn't. ty has
# no Django plugin yet and cannot consume django-stubs, so its ORM
# "unresolved-attribute" reports (Model.objects, reverse relations, …) are
# false positives; silence that rule so the remaining categories stay
# actionable. Revisit (and consider promoting to blocking) as ty matures.
[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = [
    "**/migrations/**",
    "**/tests/**",
    "**/test_*.py",
    "**/*_test.py",
    "conftest.py",
]

[tool.ty.rules]
unresolved-attribute = "ignore"
